--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,10 +3,14 @@
 
 {% block content %}
 <h1>Profile</h1>
-<p>{{user}}</p>
+<p style="border-bottom: 2px solid white;
+    border-top: 2px solid white;">{{user}}</p>
 
+<p style="display: inline;">Enter your username and secrete key in this bot</p>
+<a style="border: black solid 1px; background-color: rgb(127, 127, 247);border-radius: 4px  ;" href="https://t.me/Leave_me_a_message_bot">Telegram Bot</a>
+<p id="msg" style="margin-top: 15px; margin-bottom: 0px;"></p>
 <p>To generate link <button type="button" onclick="generate_link()">Click Here</button></p>
-<p id="link" style="display: inline;"></p>
-<p style="border: 1px white solid;color: aliceblue; background-color: black; display: inline; margin-bottom: 0%;" type="button" onclick="copyToClipboard('#link')">Copy Link</p><br>
+<p id="link" style="background-color: white; border-radius: 6px;"></p>
+<button style="display: inline; margin-bottom: 0%;" type="button" onclick="copyToClipboard('#link')">Copy Link</button><br><br>
 <button type="button"><a href="/logout">Logout</a></button>
 {% endblock %}
