--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
 <a style="border: black solid 1px; background-color: rgb(127, 127, 247);border-radius: 4px  ;" href="https://t.me/Leave_me_a_message_bot">Telegram Bot</a>
 <p id="msg" style="margin-top: 15px; margin-bottom: 0px;"></p>
 <p>To generate link <button type="button" onclick="generate_link()">Click Here</button></p>
-<p id="link" style="background-color: white; border-radius: 6px;"></p>
+<p id="link" style="background-color: white; border-radius: 6px;overflow: scroll; padding: 9px; height: 35px;"></p>
 <button style="display: inline; margin-bottom: 0%;" type="button" onclick="copyToClipboard('#link')">Copy Link</button><br><br>
 <button type="button"><a href="/logout">Logout</a></button>
 {% endblock %}
