--- a/templates/register.html
+++ b/templates/register.html
@@ -3,9 +3,9 @@
 {% block content %}
     <h1>Register</h1>
     <form action="">
-        <p id="unameerror"></p>
-        <input type="text" placeholder="Username" id="uname"><br>
         
+        <input type="text" placeholder="Username" onchange="checkname()" id="uname"><br>
+        <p id="unameerror"></p>
         
         <input style="margin-bottom: 0%;" type="password" placeholder="Password" onchange="pwreq()" id="password"><br>
         <p style="font-size: 13px;color: red; padding: 0%;margin: 0%;" id="plength"></p>
