--- a/templates/end.html
+++ b/templates/end.html
@@ -2,7 +2,7 @@
 {% block title %}End-Page{% endblock %}
 
 {% block content%}
-    <h3>Thank You For Your Message</h3><br>
+    <p style="font-size: 20px;">Thank You For Your Message</p>
     <p style="margin: 10px 0px;">If You Want To Try This</p>
-    <button><a href="/register">Click Here</a></button>
+    <button class="btn btn-primary"><a href="/register">Click Here</a></button>
 {% endblock %}
