--- a/templates/main.html
+++ b/templates/main.html
@@ -6,5 +6,5 @@
 <p>You can write or receive messages from your friends anonymously</p>
 <p>You will get those anonymous messages in a telegram bot</p>
 <p>If you want to try this</p>
-<button type="button"><a href="/register">Click Here</a></button>
+<button type="button" class="btn btn-primary"><a href="/register">Click Here</a></button>
 {% endblock %}
