--- a/templates/register.html
+++ b/templates/register.html
@@ -1,27 +1,28 @@
 {% extends "layout.html" %}
 {% block title %}Register-Page{% endblock %}
 {% block content %}
-    <h1>Register</h1>
+    <center><h2 class="mb-3">Register</h2></center>
     <form action="">
         
-        <input type="text" placeholder="Username" onchange="checkname()" id="uname"><br>
+        <input type="text" placeholder="Username" onchange="checkname()" id="uname" class="form-control">
         <p id="unameerror"></p>
         
-        <input style="margin-bottom: 0%;" type="password" placeholder="Password" onchange="pwreq()" id="password"><br>
+        <input style="margin-bottom: 0%;" type="password" placeholder="Password" onchange="pwreq()" id="password" class="form-control">
         <p style="font-size: 13px;color: red; padding: 0%;margin: 0%;" id="plength"></p>
         
         
-        <input style="margin-bottom: 0px;" type="password" placeholder="Confirm Password" onchange="checkpassword()" id="pw">
+        <input style="margin-bottom: 0px;" type="password" placeholder="Confirm Password" onchange="checkpassword()" id="pw" class="form-control">
         <p style="font-size: 13px;color: red; padding: 0%;margin: 0%;" id="err"></p>
         
         
         <p style="margin-bottom: 0%;">Enter Secrete key</p>
-        <input style="margin-bottom: 0px; margin-top: 0%;" type="text" id="s_key" placeholder="Secerte Key"><br>
-        <p style="font-size: 10px; font-weight: bold;">You Need This Secrete Key To Acess Telegram Bot</p>
+        <input style="margin-bottom: 0px; margin-top: 0%;" type="text" id="s_key" placeholder="Secerte Key" onchange="skeycheck()" class="form-control">
         
+        <p style="font-size: 13px; font-weight: bold; margin-bottom: 0%;">You Need This Secrete Key To Acess Telegram Bot</p>
+        <p id="skeyerror"></p>
         
-        <button type="button" id="btn" onclick="register()">Register</button>
+        <button type="button" id="btn" onclick="register()" class="btn btn-primary">Register</button>
         <p style="display: inline;">or</p>
-        <button><a href="/login">Login</a></button>
+        <button class="btn btn-primary"><a href="/login">Login</a></button>
     </form>
 {% endblock %}
