--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,15 @@
     href="{{url_for('static',filename='style.css')}}">
 </head>
 <body>
-    {% block content %}{% endblock %}
+    
+    <div>
+      {% block content %}{% endblock %}
+    </div>
+    <hr style="height: 6px; background-color: white;margin-bottom: 0%;">
+    <div id="footer">
+      <p style="margin-bottom: 3px;">If you find any issues contact here <a href="https://t.me/Pavan_809" class="btn btn-primary">Contact</a></p>
+    </div>
+    <hr style="height: 6px; background-color: white;  margin-top: 0%;">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
