--- a/static/style.css
+++ b/static/style.css
@@ -22,3 +22,15 @@ input{
 p{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#msglist{
+    background-color: aliceblue;
+    border: 2px solid pink;
+    max-width: 280px;
+    margin: 0 auto;
+    max-height: 250px;
+    overflow-x: scroll
+}
+#msglist p{
+    margin-bottom: 4px;
+}
