--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,13 +4,17 @@
 {% block content %}
 <center><h2 class="mb-3">Profile</h2></center>
 <p style="border-bottom: 2px solid white;
-    border-top: 2px solid white;">{{user}}</p>
+    border-top: 2px solid white;">{{user['user']}}</p>
 
-<p style="display: inline;">Enter your username and secrete key in this bot</p>
-<a style="" class="btn btn-primary" href="https://t.me/Leave_me_a_message_bot">Telegram Bot</a>
-<p id="msg" style="margin-top: 15px; margin-bottom: 0px;"></p>
 <p>To generate link <br> <button type="button" class="btn btn-primary" onclick="generate_link()">Click Here</button></p>
 <p id="link" style="background-color: white; border-radius: 6px;overflow-y: scroll;height: 35px;"></p>
 <button id="copy" style="display: inline; margin-bottom: 10px;" class="btn btn-primary" type="button" onclick="copyToClipboard('#link')">Copy Link</button><br>
+<center><h4>Messages</h4></center>
+<center id="msglist">
+    {%for i in user['msg_list']%}
+    <p style="border-bottom: 2px solid black;">{{i}}</p>
+    {% endfor %}
+</center>
+
 <button type="button" class="btn btn-primary"><a href="/logout">Logout</a></button>
 {% endblock %}
