--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,9 +26,9 @@
       {% block content %}{% endblock %}
     </div>
     <hr style="height: 6px; background-color: white;margin-bottom: 0%;">
-    <div id="footer">
-      <p style="margin-bottom: 3px;">If you find any issues contact here <a href="https://t.me/Pavan_809" class="btn btn-primary">Contact</a></p>
-    </div>
+    <center><div id="footer">
+      <p style="margin-bottom: 3px;">If you find any issues contact here <a href="https://t.me/Pavan_809" style="padding: 0;" class="btn btn-primary">Contact</a></p>
+    </div></center>
     <hr style="height: 6px; background-color: white;  margin-top: 0%;">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
