--- a/templates/login.html
+++ b/templates/login.html
@@ -3,12 +3,14 @@
 
 {% block content %}
 <center><h2 class="mb-3">Login</h2></center>
-<form action="">
+<center>
+    <form action="">
     <input id="uname" type="text" placeholder="Username" class="form-control">
     <input id="password" type="password" placeholder="Password" class="form-control">
     <p id="login_error"></p>
     <button type="button" onclick="login()" class="btn btn-primary">Login</button>
     <p style="display: inline;">or</p>
     <button type="button" class="btn btn-primary"><a href="/register">Register</a></button>
-</form>
+    </form>
+</center>
 {% endblock %}
