--- a/templates/main.html
+++ b/templates/main.html
@@ -2,8 +2,13 @@
 {% block title %}Home-Page{% endblock %}
 
 {% block content %}
-<h5>Leave Me A Message</h5>
-<p>You can write or receive messages from your friends anonymously</p>
-<p>If you want to try this</p>
-<button type="button" class="btn btn-primary"><a href="/register">Click Here</a></button>
+<center>
+    <h5>Leave Me A Message</h5>
+    <p>You can write or receive messages from your friends anonymously</p>
+    <p>Create Secret Message link and Share with your friends on Whatsapp, Facebook.</p>
+    <p>Get unknown feedback from your friends</p>
+    <p>Once your friends send you a message, you will see the results on your profile</p>
+    <p>If you want to try this</p>
+    <button type="button" class="btn btn-primary"><a href="/register">Click Here</a></button>
+</center>
 {% endblock %}
