--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,14 +22,16 @@
 </head>
 <body>
     
-    <div>
+    <div id="mainblock">
       {% block content %}{% endblock %}
     </div>
-    <hr style="height: 6px; background-color: white;margin-bottom: 0%;">
+    <div id="footerblock">
+      <hr style="height: 6px; background-color: white;margin-bottom: 0%;">
     <center><div id="footer">
       <p style="margin-bottom: 3px;">If you find any issues contact here <a href="https://t.me/Pavan_809" style="padding: 0;" class="btn btn-primary">Contact</a></p>
     </div></center>
     <hr style="height: 6px; background-color: white;  margin-top: 0%;">
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
