--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,13 +23,38 @@
     href="{{url_for('static',filename='style.css')}}">
 </head>
 <body>
-    
     <div id="mainblock">
+       <center>
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3507316425044293"
+        crossorigin="anonymous"></script>
+    <!-- lmam_ads -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3507316425044293"
+        data-ad-slot="7778948327"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+       </center> 
       {% block content %}{% endblock %}
     </div>
     <div id="footerblock">
       <hr style="height: 6px; background-color: white;margin-bottom: 0%;">
     <center><div id="footer">
+       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3507316425044293"
+        crossorigin="anonymous"></script>
+    <!-- lmam_ads -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3507316425044293"
+        data-ad-slot="7778948327"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script> 
       <p style="margin-bottom: 3px;">If you find any issues contact here <a href="https://t.me/Pavan_809" style="padding: 0;" class="btn btn-primary">Contact</a></p>
     </div></center>
     <hr style="height: 6px; background-color: white;  margin-top: 0%;">
