--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet"
     type="text/css" 
     href="{{url_for('static',filename='style.css')}}">
+
+  <meta name="google-site-verification" content="w76uVfZvYnYG9A8fmGi8cUnxjp-HH2aTUUfSpZiKITQ" />
+
 </head>
 <body>
     <div id="mainblock">
