--- a/templates/end.html
+++ b/templates/end.html
@@ -1,8 +1,29 @@
 {% extends "layout.html" %}
 {% block title %}End-Page{% endblock %}
 
+{% block adhead %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3507316425044293"
+     crossorigin="anonymous"></script>
+{% endblock %}
+
 {% block content%}
-    <p style="font-size: 20px;">Thank You For Your Message</p>
+    <center>
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3507316425044293"
+        crossorigin="anonymous"></script>
+    <!-- lmam_ads -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3507316425044293"
+        data-ad-slot="7778948327"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+       </center>
+   <center>
+        <p style="font-size: 20px;">Thank You For Your Message</p>
     <p style="margin: 10px 0px;">If You Want To Try This</p>
     <button class="btn btn-primary"><a href="/register">Click Here</a></button>
+   </center>
 {% endblock %}
