--- a/templates/leavemeamessage.html
+++ b/templates/leavemeamessage.html
@@ -1,7 +1,26 @@
 {% extends "layout.html" %}
 {% block title %}Leavemeamessage-Page{% endblock %}
 
+{% block adhead %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3507316425044293"
+     crossorigin="anonymous"></script>
+{% endblock %}
+
 {% block content %}
+<center>
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3507316425044293"
+        crossorigin="anonymous"></script>
+    <!-- lmam_ads -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3507316425044293"
+        data-ad-slot="7778948327"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+       </center>
 <center>
     <p style="border-top:2px solid white;border-bottom: 2px solid white;">Write a message to {{user}} anonymously</p>
 <form action="">
