--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,26 @@
 {% extends "layout.html" %}
 {% block title %}Home-Page{% endblock %}
 
+
+{% block adhead %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3507316425044293"
+     crossorigin="anonymous"></script>
+{% endblock %}
 {% block content %}
+     <center>
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3507316425044293"
+        crossorigin="anonymous"></script>
+    <!-- lmam_ads -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3507316425044293"
+        data-ad-slot="7778948327"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+       </center> 
 <center>
     <h5>Leave Me A Message</h5>
     <p>You can write or receive messages from your friends anonymously</p>
